Make the stats nicer on mobile

--- a/_includes/partials/stats.html
+++ b/_includes/partials/stats.html
@@ -46,6 +46,8 @@
         showLabel: false
     };
     var BarOptions = {
+        height: 200,
+        width: 300,
         horizontalBars: true,
         stackBars: true,
         high: 100
