--- a/_includes/modules/carousel.html
+++ b/_includes/modules/carousel.html
@@ -17,14 +17,27 @@
         {% include {{ include.content }} %}
     </div>
 
+    {% if include.bottomcontrols %}
+        <div class="bottom-carousel-control row">
+            <a class="col-xs-6 left" href="#{{ include.title }}" role="button" data-slide="prev">
+                <i class="icon icon-chevron-left" aria-hidden="true"></i>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="col-xs-6 right" href="#{{ include.title }}" role="button" data-slide="next">
+                <i class="icon icon-chevron-right" aria-hidden="true"></i>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    {% endif %}
+
     {% if include.controls %}
         <!-- Controls -->
         <a class="left carousel-control" href="#{{ include.title }}" role="button" data-slide="prev">
-            <i class="fa fa-chevron-left" aria-hidden="true"></i>
+            <i class="icon icon-chevron-left" aria-hidden="true"></i>
             <span class="sr-only">Previous</span>
         </a>
         <a class="right carousel-control" href="#{{ include.title }}" role="button" data-slide="next">
-            <i class="fa fa-chevron-right" aria-hidden="true"></i>
+            <i class="icon icon-chevron-right" aria-hidden="true"></i>
             <span class="sr-only">Next</span>
         </a>
     {% endif %}
