--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,6 +20,7 @@
 @import 'partials/footer';
 
 @import 'sections/program-overview';
+@import 'sections/application-process';
 @import 'sections/upcoming-events';
 @import 'sections/program-stats';
 @import 'sections/past-companies';
