Updates to chart and header

--- a/_includes/partials/stats.html
+++ b/_includes/partials/stats.html
@@ -43,7 +43,12 @@
     var PieOptions = {
         height: 200,
         width: 200,
-        showLabel: false
+        showLabel: true
+    };
+    var PieSpecialOptions = {
+        labelInterpolationFnc: function(value) {
+            return value === 0 ? "" : Math.floor(value/35 * 100) + "%";
+        }
     };
     var BarOptions = {
         height: 200,
