--- a/_layouts/jumbotron-header.html
+++ b/_layouts/jumbotron-header.html
@@ -3,8 +3,11 @@ layout: base
 ---
 
 <header class="header-carousel">
-    <div class="ytp" style="color: white; position: absolute; z-index: 100;">
-        <h1>Santa Monica Youth Tech Program</h1>
+    <div class="ytp-logo">
+        <h1>
+            Santa Monica <br>
+            Youth Tech Program
+        </h1>
     </div>
     {% comment %}{% include navigation.html %}{% endcomment %}
     {% include modules/jumbotron-carousel.html jumbotron=page.jumbotron %}
