--- a/_includes/partials/stats.html
+++ b/_includes/partials/stats.html
@@ -23,6 +23,8 @@
     var LineOptions = {
         height: 200,
         width: 400,
+        high: 100,
+        low: 0,
         fullWidth: true,
         lineSmooth: false,
         chartPadding: {
