--- a/_sass/sections/_program-stats.scss
+++ b/_sass/sections/_program-stats.scss
@@ -40,6 +40,15 @@ $controlWidth: 7%;
     }
 }
 
+.ct-grid {
+    stroke: rgba(0, 0, 0, 0.5);
+}
+
+.ct-label {
+    color: rgba(0, 0, 0, 0.76);
+    fill: rgba(0, 0, 0, 0.76);
+}
+
 .neighborhood-chart {
     .ct-label {
         color: #FFF;
