Chart value updates

--- a/_includes/partials/stats.html
+++ b/_includes/partials/stats.html
@@ -42,6 +42,9 @@
             }
         }
     });
+    var LineNohighOptions = $.extend({}, LineOptions, {
+        high: 50
+    });
     var PieOptions = {
         height: 200,
         width: 200,
