Reposition awards when there are odd number of awards

--- a/_sass/sections/_program-awards.scss
+++ b/_sass/sections/_program-awards.scss
@@ -1,5 +1,13 @@
 .program-awards {
     .trophy-case {
+        @include siblingsCount(odd, ".award") {
+            &:last-child {
+                @include respond-to(md) {
+                    margin-left: 25%;
+                }
+            }
+        }
+
         .award {
             .image {
                 display: table;
