--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,6 +9,7 @@
 @import 'bootstrap/navigation';
 
 @import 'modules/siblings';
+@import 'generic/anchor';
 @import 'generic/lists';
 
 @import 'partials/blackboard';
