--- a/_sass/sections/_program-stats.scss
+++ b/_sass/sections/_program-stats.scss
@@ -60,6 +60,7 @@ $controlWidth: 0; // For arrows, it was 7%
 .ct-label {
     color: rgba(0, 0, 0, 0.76);
     fill: rgba(0, 0, 0, 0.76);
+    font-size: 8px;
 }
 
 .neighborhood-chart {
