--- a/_layouts/jumbotron-header.html
+++ b/_layouts/jumbotron-header.html
@@ -6,7 +6,7 @@ layout: base
     <div class="ytp-logo">
         <h1>
             Santa Monica <br>
-            Youth Tech Program
+            <span style="color: #A1C435">Youth Tech Program</span>
         </h1>
     </div>
     {% comment %}{% include navigation.html %}{% endcomment %}
