--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,6 +16,7 @@
 @import 'partials/brag-card';
 @import 'partials/css-table';
 @import 'partials/faq-panel';
+@import 'partials/partners';
 @import 'partials/image-floater';
 @import 'partials/page-sections';
 @import 'partials/photo';
