--- a/_includes/partials/partners.html
+++ b/_includes/partials/partners.html
@@ -3,7 +3,7 @@
         <div class="partner-grid">
             {% for partner in slide %}
                 <div class="partner">
-                    <img src="{{ '/assets/images/partners/' | prepend: site.baseurl }}{{ partner | replace: ' ', '_' }}.png" alt="{{ partner }}">
+                    <img class="img-responsive center-block" src="{{ '/assets/images/partners/' | prepend: site.baseurl }}{{ partner | replace: ' ', '_' }}.png" alt="{{ partner }}">
                 </div>
             {% endfor %}
         </div>
