Add flag to Summer Program section

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,13 +16,14 @@
 @import 'partials/brag-card';
 @import 'partials/css-table';
 @import 'partials/faq-panel';
-@import 'partials/partners';
 @import 'partials/image-floater';
 @import 'partials/page-sections';
 @import 'partials/photo';
 @import 'partials/footer';
 
 @import 'pages/index/program-overview';
+@import 'pages/index/partners';
+@import 'pages/index/summer-program';
 @import 'pages/index/eligibility';
 @import 'pages/index/application-process';
 @import 'pages/index/upcoming-events';
