--- a/_sass/pages/index/_summer-program.scss
+++ b/_sass/pages/index/_summer-program.scss
@@ -1,8 +1,5 @@
-.shelf .thumb {
-    float: left;
-}
-
-.shelf .thumb img {
-    margin-right: 20px;
-    width: 75px;
+.summer-program {
+    .shelf .flag {
+        width: 75px;
+    }
 }
