--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,7 @@
 @import 'bootstrap/carousel';
 @import 'bootstrap/navigation';
 
+@import 'modules/book-shelf';
 @import 'modules/siblings';
 @import 'generic/anchor';
 @import 'generic/lists';
