--- a/_sass/pages/index/_program-awards.scss
+++ b/_sass/pages/index/_program-awards.scss
@@ -1,6 +1,6 @@
 .program-awards {
     .trophy-case {
-        @include siblingsCount(odd, ".award") {
+        @include siblingsCountRelative(odd, ".award") {
             &:last-child {
                 @include respond-to(md) {
                     margin-left: 25%;
