Make the partners carousel the same height for each item

--- a/_sass/bootstrap/_carousel.scss
+++ b/_sass/bootstrap/_carousel.scss
@@ -8,6 +8,16 @@
     }
 }
 
+.flex-grid-carousel {
+    .carousel-inner {
+        display: flex;
+    }
+
+    .item {
+        width: 100%;
+    }
+}
+
 .header-carousel {
     @include responsive-carousel(xs, 400px);
     @include responsive-carousel(sm, 450px);
