--- a/_sass/pages/index/_partners.scss
+++ b/_sass/pages/index/_partners.scss
@@ -12,6 +12,8 @@ $_spacing: 40px;
     align-items: center;
     display: flex;
     flex-wrap: wrap;
+    height: 100%;
+    width: 100%;
 }
 
 .partner {
@@ -22,5 +24,13 @@ $_spacing: 40px;
     @include respond-to(md) {
         flex-basis: 50%;
         max-width: 50%;
+    }
+
+    @include siblingsCountAbsolute(odd, #{&}) {
+        &:last-child {
+            @include respond-to(md) {
+                margin-left: 25%;
+            }
+        }
     }
 }
