--- a/_sass/pages/index/_partners.scss
+++ b/_sass/pages/index/_partners.scss
@@ -23,4 +23,12 @@ $_spacing: 40px;
         flex-basis: 50%;
         max-width: 50%;
     }
+
+    @include siblingsCountAbsolute(odd, #{&}) {
+        &:last-child {
+            @include respond-to(md) {
+                margin-left: 25%;
+            }
+        }
+    }
 }
