Clean up section headers

--- a/_includes/partials/stats.html
+++ b/_includes/partials/stats.html
@@ -5,8 +5,8 @@
                 <div id="{{ stat.name }}-chart" class="stat-chart {{ stat.name }}-chart"></div>
             </div>
 
-            <div class="col-lg-6 blackboard">
-                <h2 class="section-header">{{ stat.title }}</h2>
+            <div class="col-lg-6 section-header">
+                <h2>{{ stat.title }}</h2>
                 <h3>{{ stat.slug }}</h3>
 
                 {% if stat.content %}
