Add photos to summer program section

--- a/_includes/modules/photo.html
+++ b/_includes/modules/photo.html
@@ -1,3 +1,4 @@
-<div class="photo">
-    <img src="{{ '/assets/images/' | prepend: site.baseurl }}{{ include.photo }}" alt="{{ include.alt }}">
+<div class="photo {{ include.class }}">
+    <img src="{{ '/assets/images/' | prepend: site.baseurl }}{{ include.photo }}"
+         alt="{{ include.alt }}">
 </div>
