--- a/_includes/partials/upcoming-photos.html
+++ b/_includes/partials/upcoming-photos.html
@@ -1,11 +1,19 @@
+{% assign firstImageLoaded = false %}
+
 {% for event in site.data.events %}
-    <div class="item {% if forloop.first %}active{% endif %}">
-        <div id="event-{{ forloop.index }}"
-             class="js-event"
-             data-date="{{ event.date }}"
-             role="tab">
-            {% capture photoUrl %}photos/{{ event.image }}{% endcapture %}
-            {% include modules/photo.html photo=photoUrl alt=event.desc %}
+    {% assign nowUnix = 'now' | date: '%s' | plus: 0 %}
+    {% assign eventUnix = event.date | date: '%s' | plus: 86400 %}
+
+    {% if eventUnix > nowUnix %}
+        <div class="item {% if firstImageLoaded == false %}active{% endif %}">
+            <div id="event-{{ forloop.index }}"
+                 class="js-event"
+                 data-date="{{ event.date }}"
+                 role="tab">
+                {% capture photoUrl %}photos/{{ event.image }}{% endcapture %}
+                {% include modules/photo.html photo=photoUrl alt=event.desc %}
+            </div>
         </div>
-    </div>
+        {% assign firstImageLoaded = true %}
+    {% endif %}
 {% endfor %}
