Add judges page + other changes
- Other changes include a stylized "logo" in the header
- Create a header for pages
- Update some CSS to be more reusable

--- a/_layouts/jumbotron-header.html
+++ b/_layouts/jumbotron-header.html
@@ -2,7 +2,7 @@
 layout: base
 ---
 
-<header class="header-carousel">
+<header class="header-carousel banner-header">
     <div class="ytp-logo">
         <h1>
             Santa Monica <br>
