--- a/_sass/partials/_page-sections.scss
+++ b/_sass/partials/_page-sections.scss
@@ -24,6 +24,7 @@
         font-size: 16px;
         font-weight: bold;
         margin-bottom: 0;
+        margin-top: 0;
         text-transform: uppercase;
     }
 
