Use new universal header

--- a/_layouts/banner-header.html
+++ b/_layouts/banner-header.html
@@ -2,29 +2,10 @@
 layout: base
 ---
 
-<header class="site-header">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="ytp-logo">
-                    <p class="top">Santa Monica</p>
-                    <p class="bottom">Youth Tech Program</p>
-                </div>
-            </div>
-            <div class="col-sm-6 hidden-xs text-right">
-                <div class="city-logo">
-                    <img src="{{ '/assets/images/csm-logo-black.png' | prepend: site.baseurl }}"
-                         alt="City of Santa Monica">
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
-
-<header class="banner-header">
+<div class="banner-header">
     <div class="image-theater">
         <img src="{{ '/assets/images/judges_banner.jpg' | prepend: site.baseurl }}" alt="Judges at Pitch Night">
     </div>
-</header>
+</div>
 
 {{ content }}
