--- a/_layouts/jumbotron-header.html
+++ b/_layouts/jumbotron-header.html
@@ -2,15 +2,9 @@
 layout: base
 ---
 
-<header class="header-carousel banner-header">
-    <div class="ytp-logo">
-        <h1>
-            Santa Monica <br>
-            <span style="color: #A1C435">Youth Tech Program</span>
-        </h1>
-    </div>
+<div class="header-carousel banner-header">
     {% comment %}{% include navigation.html %}{% endcomment %}
     {% include modules/jumbotron-carousel.html jumbotron=page.jumbotron %}
-</header>
+</div>
 
 {{ content }}
