--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,6 +21,7 @@
 @import 'partials/faq-panel';
 @import 'partials/image-floater';
 @import 'partials/logo';
+@import 'partials/movie-theater';
 @import 'partials/page-sections';
 @import 'partials/photo';
 @import 'partials/footer';
