--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,7 +4,7 @@
 
     <body>
         <header class="site-header">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="ytp-logo">
