--- a/_includes/partials/partners.html
+++ b/_includes/partials/partners.html
@@ -4,7 +4,7 @@
             {% for partner in slide %}
                 <div class="partner {{ partner.classes }} partner-md-6">
                     <a href="{{ partner.link }}" target="_blank">
-                        <img class="img-responsive center-block" src="{{ '/assets/images/partners/' | prepend: site.baseurl }}{{ partner.name | replace: ' ', '_' }}.png" alt="{{ partner.name }}">
+                        <img class="img-responsive center-block" src="{{ '/assets/images/partners/' | prepend: site.baseurl }}{{ partner.name | replace: '.', '' | replace: ' ', '_' }}.png" alt="{{ partner.name }}">
                     </a>
                 </div>
             {% endfor %}
